@@ -8,36 +8,45 @@ import com.gregtechceu.gtceu.api.capability.recipe.CWURecipeCapability;
 import com.gregtechceu.gtceu.api.capability.recipe.IO;
 import com.gregtechceu.gtceu.api.capability.recipe.ItemRecipeCapability;
 import com.gregtechceu.gtceu.api.machine.MetaMachine;
-import com.gregtechceu.gtceu.api.machine.feature.multiblock.IDisplayUIMachine;
 import com.gregtechceu.gtceu.api.machine.feature.multiblock.IMultiPart;
-import com.gregtechceu.gtceu.api.machine.multiblock.MultiblockDisplayText;
 import com.gregtechceu.gtceu.api.machine.multiblock.WorkableElectricMultiblockMachine;
 import com.gregtechceu.gtceu.api.machine.trait.RecipeLogic;
+import com.gregtechceu.gtceu.api.multiblock.error.PatternStringError;
+import com.gregtechceu.gtceu.api.multiblock.pattern.PatternState;
 import com.gregtechceu.gtceu.api.recipe.ActionResult;
 import com.gregtechceu.gtceu.api.recipe.GTRecipe;
 import com.gregtechceu.gtceu.api.recipe.RecipeHelper;
 import com.gregtechceu.gtceu.common.machine.multiblock.part.ObjectHolderMachine;
+import com.gregtechceu.gtceu.common.mui.GTMultiblockTextUtil;
 
+import net.minecraft.ChatFormatting;
+import net.minecraft.MethodsReturnNonnullByDefault;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.item.ItemStack;
 
+import brachy.modularui.api.widget.IWidget;
+import brachy.modularui.value.sync.PanelSyncManager;
 import lombok.Getter;
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
+import javax.annotation.ParametersAreNonnullByDefault;
+
+@MethodsReturnNonnullByDefault
+@ParametersAreNonnullByDefault
 public class ResearchStationMachine extends WorkableElectricMultiblockMachine
-                                    implements IOpticalComputationReceiver, IDisplayUIMachine {
+                                    implements IOpticalComputationReceiver {
 
     @Getter
     private IOpticalComputationProvider computationProvider;
     @Getter
-    private @Nullable ObjectHolderMachine objectHolder;
+    private ObjectHolderMachine objectHolder;
 
     public ResearchStationMachine(BlockEntityCreationInfo info) {
-        super(info, (m) -> new ResearchStationRecipeLogic((ResearchStationMachine) m));
+        super(info, new ResearchStationRecipeLogic());
     }
 
     @Override
@@ -46,15 +55,18 @@ public class ResearchStationMachine extends WorkableElectricMultiblockMachine
     }
 
     @Override
-    public void onStructureFormed() {
-        super.onStructureFormed();
+    public void formStructure(@NotNull String substructureName) {
+        var pState = patternStates.get(substructureName);
+        super.formStructure(substructureName);
         for (IMultiPart part : getParts()) {
-            if (part instanceof ObjectHolderMachine objectHolder) {
-                if (objectHolder.getFrontFacing() != getFrontFacing().getOpposite()) {
-                    onStructureInvalid();
+            if (part instanceof ObjectHolderMachine holder) {
+                if (holder.getFrontFacing() != getFrontFacing().getOpposite()) {
+                    pState.setError(new PatternStringError(
+                            Component.translatable("gtceu.predicate_error.object_holder.direction")));
+                    invalidateStructure(substructureName);
                     return;
                 }
-                this.objectHolder = objectHolder;
+                this.objectHolder = holder;
             }
 
             MetaMachine base = part.self();
@@ -66,22 +78,40 @@ public class ResearchStationMachine extends WorkableElectricMultiblockMachine
         }
 
         // should never happen, but would rather do this than have an obscure NPE
-        if (computationProvider == null || objectHolder == null) {
-            onStructureInvalid();
+        if (computationProvider == null) {
+            pState.setError(new PatternStringError(
+                    Component.translatable("gtceu.predicate_error.research.missing_computation")));
+            invalidateStructure(substructureName);
+        }
+
+        if (objectHolder == null) {
+            pState.setError(new PatternStringError(
+                    Component.translatable("gtceu.predicate_error.research.missing_object_holder")));
+            invalidateStructure(substructureName);
         }
     }
 
     @Override
-    public boolean checkPattern() {
-        boolean isFormed = super.checkPattern();
-        if (isFormed && objectHolder != null && objectHolder.getFrontFacing() != getFrontFacing().getOpposite()) {
-            onStructureInvalid();
+    public PatternState checkStructurePattern(String name) {
+        var patternState = super.checkStructurePattern(name);
+        // var cache = getSubstructure(name).getCache();
+        var cache = patternStates.get(name).getCache();
+        ObjectHolderMachine objHolder = null;
+        for (var entry : cache.long2ObjectEntrySet()) {
+            if (entry.getValue().getBlockEntity() instanceof ObjectHolderMachine objectHolder) {
+                objHolder = objectHolder;
+            }
         }
-        return isFormed;
+        if (objHolder != null && objHolder.getFrontFacing() != getFrontFacing().getOpposite()) {
+            patternState.setError(
+                    new PatternStringError(Component.translatable("gtceu.predicate_error.object_holder.direction")));
+            invalidateStructure(name);
+        }
+        return patternState;
     }
 
     @Override
-    public void onStructureInvalid() {
+    public void invalidateStructure(String name) {
         computationProvider = null;
         // recheck the ability to make sure it wasn't the one broken
         for (IMultiPart part : getParts()) {
@@ -92,7 +122,7 @@ public class ResearchStationMachine extends WorkableElectricMultiblockMachine
             }
         }
         objectHolder = null;
-        super.onStructureInvalid();
+        super.invalidateStructure(name);
     }
 
     @Override
@@ -101,28 +131,34 @@ public class ResearchStationMachine extends WorkableElectricMultiblockMachine
     }
 
     @Override
-    public void addDisplayText(List<Component> textList) {
-        MultiblockDisplayText.builder(textList, isFormed())
-                .setWorkingStatus(recipeLogic.isWorkingEnabled(), recipeLogic.isActive())
-                .setWorkingStatusKeys("gtceu.multiblock.idling", "gtceu.multiblock.work_paused",
-                        "gtceu.multiblock.research_station.researching")
-                .addEnergyUsageLine(energyContainer)
-                .addEnergyTierLine(tier)
-                .addWorkingStatusLine()
-                // .addComputationUsageExactLine(computationProvider.getMaxCWUt()) // TODO: (Onion)
-                .addProgressLineOnlyPercent(recipeLogic.getProgressPercent());
+    public List<IWidget> getWidgetsForDisplay(PanelSyncManager syncManager) {
+        List<IWidget> widgets = new ArrayList<>();
+        widgets.add(GTMultiblockTextUtil.addUnformedWarning(this, syncManager));
+        widgets.add(GTMultiblockTextUtil.addWorkingStatusLine(this, syncManager,
+                () -> Component.translatable("gtceu.multiblock.research_station.researching")
+                        .withStyle(ChatFormatting.GREEN)));
+        widgets.add(GTMultiblockTextUtil.addEnergyTierLine(this, syncManager));
+        widgets.add(GTMultiblockTextUtil.addEnergyUsageLine(this, syncManager));
+        widgets.add(GTMultiblockTextUtil.addOutputLines(this, syncManager));
+        // .addComputationUsageExactLine(computationProvider.getMaxCWUt()) // TODO: (Onion)
+        widgets.add(GTMultiblockTextUtil.addProgressLinePercentOnly(this, syncManager));
+        return widgets;
     }
 
     public static class ResearchStationRecipeLogic extends RecipeLogic {
 
-        public ResearchStationRecipeLogic(ResearchStationMachine metaTileEntity) {
-            super(metaTileEntity);
+        public ResearchStationRecipeLogic() {
+            super();
         }
 
-        @NotNull
         @Override
         public ResearchStationMachine getMachine() {
             return (ResearchStationMachine) super.getMachine();
+        }
+
+        @Override
+        protected List<Class<?>> validMachineClasses() {
+            return List.of(ResearchStationMachine.class);
         }
 
         // skip "can fit" checks, it can always fit
@@ -136,7 +172,7 @@ public class ResearchStationMachine extends WorkableElectricMultiblockMachine
 
         @Override
         public boolean checkMatchedRecipeAvailable(GTRecipe match) {
-            var modified = machine.fullModifyRecipe(match);
+            var modified = getMachine().fullModifyRecipe(match);
             if (modified != null) {
                 // What is the point of this
                 if (!modified.inputs.containsKey(CWURecipeCapability.CAP) &&
@@ -159,15 +195,15 @@ public class ResearchStationMachine extends WorkableElectricMultiblockMachine
         }
 
         protected ActionResult matchRecipeNoOutput(GTRecipe recipe) {
-            if (!machine.hasCapabilityProxies()) return ActionResult.FAIL_NO_CAPABILITIES;
-            return RecipeHelper.handleRecipe(machine, recipe, IO.IN, recipe.inputs, Collections.emptyMap(), false,
+            if (!getMachine().hasCapabilityProxies()) return ActionResult.FAIL_NO_CAPABILITIES;
+            return RecipeHelper.handleRecipe(getMachine(), recipe, IO.IN, recipe.inputs, Collections.emptyMap(), false,
                     true);
         }
 
         protected ActionResult matchTickRecipeNoOutput(GTRecipe recipe) {
             if (recipe.hasTick()) {
-                if (!machine.hasCapabilityProxies()) return ActionResult.FAIL_NO_CAPABILITIES;
-                return RecipeHelper.handleRecipe(machine, recipe, IO.IN, recipe.tickInputs, Collections.emptyMap(),
+                if (!getMachine().hasCapabilityProxies()) return ActionResult.FAIL_NO_CAPABILITIES;
+                return RecipeHelper.handleRecipe(getMachine(), recipe, IO.IN, recipe.tickInputs, Collections.emptyMap(),
                         false, true);
             }
             return ActionResult.SUCCESS;
@@ -195,7 +231,7 @@ public class ResearchStationMachine extends WorkableElectricMultiblockMachine
             ItemStack outputItem = ItemStack.EMPTY;
             var contents = lastRecipe.getOutputContents(ItemRecipeCapability.CAP);
             if (!contents.isEmpty()) {
-                outputItem = ItemRecipeCapability.CAP.of(contents.get(0).content).getItems()[0];
+                outputItem = ItemRecipeCapability.CAP.of(contents.getFirst().content()).getItems()[0];
             }
             if (!outputItem.isEmpty()) {
                 holder.setDataItem(outputItem.copy());
